--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-    <properties>
-        <spring-boot.version>1.1.6.RELEASE</spring-boot.version>
-    </properties>
-    <parent>
+    	<properties>
+        	<spring-boot.version>1.3.0.RELEASE</spring-boot.version>
+    	</properties>
+    	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.1.7.RELEASE</version>
+		<version>1.3.0.RELEASE</version>
 	</parent>
 	<artifactId>spring-boot-jdbc</artifactId>
 	<name>spring-boot-jdbc</name>
@@ -19,42 +19,42 @@
 	</organization>
 	<dependencies>
         <!-- tag::dependencies[] -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-jdbc</artifactId>
+        	<version>${spring-boot.version}</version>
+        </dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-boot.version}</version>
         </dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot.version}</version>
-        </dependency>
-		<dependency>
-			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-jdbc</artifactId>
-            <version>2.1.4</version>
+		<groupId>org.neo4j</groupId>
+		<artifactId>neo4j-jdbc</artifactId>
+            <version>2.3.2</version>
         </dependency>
         <!-- end::dependencies[] -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jetty</artifactId>
-            <version>${spring-boot.version}</version>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-jetty</artifactId>
+        	<version>${spring-boot.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.1.1</version>
+        	<groupId>org.apache.httpcomponents</groupId>
+        	<artifactId>httpclient</artifactId>
+        	<version>4.1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpcore</artifactId>
-            <version>4.1</version>
+        	<groupId>org.apache.httpcomponents</groupId>
+        	<artifactId>httpcore</artifactId>
+        	<version>4.1</version>
         </dependency>
         <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<scope>test</scope>
+	</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -64,4 +64,10 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories> 
+		<repository> 
+			<id>neo4j-public</id> 
+			<url>http://m2.neo4j.org/content/groups/public</url> 
+		</repository> 
+	</repositories> 
 </project>
