Update to JDBC 3.0.1 Also support envioronment variables

--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
         </dependency>
 		<dependency>
 		<groupId>org.neo4j</groupId>
-		<artifactId>neo4j-jdbc</artifactId>
-            <version>3.0</version>
+		<artifactId>neo4j-jdbc-driver</artifactId>
+            <version>3.0.1</version>
         </dependency>
         <!-- end::dependencies[] -->
         <dependency>
